test/files/tokenizer/errors/incomplete-string.otest
name = "Incomplete string"
line = 2
character = 14
error = "Expected closing double quotation mark."

---

"this is a te
